fix(deployment): corrects branch name for github actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   # Trigger the workflow on pushes to the main branch
   push:
     branches:
-      - main
+      - master
 
 # Allow one concurrent deployment
 concurrency:
