--- a/_data/data.yml
+++ b/_data/data.yml
@@ -87,7 +87,7 @@ education:
 experiences:
   title: Java Backend Software Engineer
   info:
-    - role: Lead Developer
+    - role: Software Engineer
       time: 2024 - Present
       company: Contal Services, Brisbane
       details: |
