--- a/_data/data.yml
+++ b/_data/data.yml
@@ -18,7 +18,7 @@ sidebar:
   timezone: Australia/Brisbane # Enter your timezone, e.g., America/Havana, Africa/Casablanca, America/North_Dakota/Center
   citizenship:
   website: https://eduardodiaz.dev # Include the full website URL, including "http://" or "https://".
-  linkedin: alandoe
+  linkedin: eduardo-diaz-dominguez
   xing:
   github: eduardado
   telegram: # add your nickname without '@' sign
