--- a/_data/data.yml
+++ b/_data/data.yml
@@ -114,7 +114,7 @@ experiences:
       details: |
         - Creation & Development of PostGresSQL for scientific geolocation database.
         - Stack: PostGresSQL, Database Administration & design, Python
-        - ref: littleoakey@savethekoala.com
+        - ref: davidmurraygrant@gmail.com ; littleoakey@savethekoala.com
     - role: Freelance Software Engineer
       time: Mar 2024 - May 2024
       company: Boomzza!
