--- a/_data/data.yml
+++ b/_data/data.yml
@@ -9,7 +9,7 @@ sidebar:
 
   # Profile information
   name: Eduardo Diaz
-  tagline: Full Stack Developer
+  tagline: Software Developer
   avatar: profile.png #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
   # Sidebar links
@@ -52,12 +52,15 @@ sidebar:
 career-profile:
   title: Career Profile
   summary: |
-    Summarise your career here lorem ipsum dolor sit amet, consectetuer
-    adipiscing elit. You can [download this free resume/CV template here]().
-    Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-    penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-    Donec quam felis, ultricies nec, pellentesque eu.
-    Second paragraph if required.
+    Software Engineer with nearly 5 years of experience in the Java ecosystem. My expertise spans backend development (Spring Boot, REST APIs) and Java-based full-stack solutions (Vaadin, JavaFX, JSP). I have hands-on experience designing database schemas and building data-driven applications using diverse SQL databases (PostgreSQL, MySQL, Oracle, and Informix) and persistence frameworks (Hibernate, JPA, MyBatis).
+    My background as a Clinical Scientist in the Biotechnology field has embedded a systematic, analytical, and highly detail-oriented approach to problem-solving, which I now apply to the full software development lifecycle.
+    I am a proactive and collaborative developer dedicated to continuous improvement and delivering high-quality, robust software.
+
+I am a proactive and collaborative developer dedicated to continuous improvement and delivering high-quality, robust software.
+
+My background as a Clinical Scientist in the Biotechnology field has embedded a systematic, analytical, and highly detail-oriented approach to problem-solving, which I now apply to the full software development lifecycle.
+
+I am a proactive and collaborative developer dedicated to continuous improvement and delivering high-quality, robust software.
 education:
   title: Multiplatform Software Development
   info:
