--- a/_data/data.yml
+++ b/_data/data.yml
@@ -245,23 +245,20 @@ skills:
   title: Skills &amp; Proficiency
 
   toolset:
-    - name: Python & Django
+    - name: Java & Spring Boot
       level: 98%
 
-    - name: Javascript & jQuery
-      level: 98%
-
-    - name: Angular
-      level: 98%
-
-    - name: HTML5 & CSS
+    - name: RDBMS PostgreSQL, MySQL, Oracle, Informix
       level: 95%
 
-    - name: Ruby on Rails
-      level: 85%
+    - name: Git
+      level: 95%
 
-    - name: Sketch & Photoshop
-      level: 60%
+    - name: HTML5 & CSS && JavaScript
+      level: 75%
+
+    - name: ReactJs, JavaFx, Vaadin, JSP, Tapestry
+      level: 65%
 
 footer: >
   Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
